--- a/Page_Web_Initiale.html
+++ b/Page_Web_Initiale.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>	<!-- En-tête de la page -->
 		<!-- Latest compiled and minified Bootstrap CSS -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/    bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 		<meta charset="utf-8" />	<!-- Cette balise indique l'encodage utilisé dans votre fichier .html ici utf-8 -->
 		<title>Exemple d'utilisation de Bootstrap</title> <!-- Ce titre s'affiche dans l'onglet du navigateur -->
@@ -10,17 +10,30 @@
 	<body > 	<!-- Corps de la page -->
 
 		<!-- HEADER Titre de la page -->
-		<header>
+		<header class="jumbotron" class="text-center"style="margin-bottom:0" >
 			<h1>Exemple d'utilisation de Bootstrap</h1>
 		</header>
 
 		<!-- MENU PRINCIPAL -->
-		<nav>
-			<a href="#">Accueil</a> - 
-			<a href="#">Cours HTML</a> - 
-			<a href="#">Cours CSS</a> - 
-			<a href="#">Cours PHP</a> - 
-			<a href="#">Cours Javascript</a>
+		<nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+				<ul class="navbar-nav">
+						<li class="nav-item">
+						  <a class="nav-link active" href="#">Accueil</a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link" href="#">Cours HTML</a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link" href="#">Cours CSS</a>
+						</li>
+						<li class="nav-item">
+						   <a class="nav-link" href="#">Cours PHP</a>
+							  </li>
+						 <li class="nav-item">
+								<a class="nav-link" href="#">Cours Javascript</a>
+							</li>
+					  </ul>
+			
 		</nav>
 
 		<!-- ZONE PRINCIPALE -->
